--- a/start.html
+++ b/start.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8"><!-- meta (정보작성 태그를 뜻한다.) charset (다국어 설정) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- viewport : 사용자가 이용하는 디바이스 화면 / "width=device-width, initial-scale=1.0" 뷰포트에 따라 사이트 폭 100% 비율 자동 설정 -->
+    <meta name="description" content="5살 아이도 할 수 있다! HTML의 모든것">
+    <!-- (위) 사이트 검색 결과 출력시 보이는 요약정보 -->
+    <meta name="keywords" content="html, html공부, html 왕보초">
+    <!-- (위) 사이트 검색 단어 설정, 다수 설정가능(콤마구분) -->
     <title>시작|html|내 헤어쿠포오오오온!!!!</title>
     <!-- 실행중인 창을 구분할 수 있는 제목 표시줄 제목 설정 -->
 </head>
