--- a/basic_cgv1.html
+++ b/basic_cgv1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="혈귀로 변해버린 여동생 네즈코를 인간으로 되돌리기 위해
     혈귀를 사냥하는 조직인 《귀살대》에 입대한 카마도 탄지로.">
-    <meta name="keywords" content="귀멸의 칼날, 무한성편, 무한성, 귀칼">
+    <meta name="keywords" content="귀멸의 칼날, 무한성편, 무한성">
     <title>극장판 귀명의 칼날: 무한성편 | CGV</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
         혈귀를 사냥하는 조직인 《귀살대》에 입대한 카마도 탄지로.<br>
         입대 후 동료인 아가츠마 젠이츠, 하시비라 이노스케와 함께 많은 혈귀와 싸우고,<br>
         성장하면서 세 사람의 우정과 유대는 깊어진다.
-        
+
     </p>
     <p>탄지로는 《귀살대》 최고위 검사인 《주》와도 함께 싸웠다.<br>
         「무한열차」에서는 염주?렌고쿠 쿄쥬로, 「유곽」에서는 음주?우즈이 텐겐,<br>
