--- a/basic.HTML
+++ b/basic.HTML
@@ -31,5 +31,11 @@
     <P>제목과 관련한 내용을 블록태그 P에 묶는다.</P>
     <!-- HTML은 구조, CSS 디자인, js 동작 -->
     <!-- HTML 암기 시 html이 가지는 디자인 형태는 무시하고 의미를 기억하자. / 모든 디자인은 CSS에서 진행된다. -->
+    ---
+    <!-- sub, sup / 아래첨자 윗첨자 -->
+    <p>123<sub>4</sub><sup>5</sup></p>
+    <!-- s, del 교체 or 삭제 텍스트 -->
+    <p>원가 : <del>32,000원</del></p>
+    <p>할인가 : <em>20,000원</em></p>
 </body>
 </html>
