--- a/basic_megabox1.html
+++ b/basic_megabox1.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="나의 딸은 좀비다. 이 세상 마지막 남은 유일한 좀비">
     <meta name="keywords" content="좀비딸, 메가박스, MEGABOX, 메가박스 좀비딸, My Daughter is a Zombie">
-    <title>Document</title>
+    <title>좀비딸 | MEET PLAY SHARE, 메가박스</title>
 </head>
 <body>
     <!-- 상단 -->
-    <h1>MEGABOX로고</h1>
     <h2>영화</h2>
     <h2>예매</h2>
     <h2>극장</h2>
+    <h1>MEGABOX로고</h1>
     <h2>이벤트</h2>
     <h2>스토어</h2>
     <h2>혜택</h2>
@@ -21,15 +21,19 @@
     <h1>좀비딸</h1>
     <p>My Daughter is a Zombie</p>
     <h2>실관람 평점</h2>
-    <p>8.7</p>
+    <p><strong>8.7</strong></p>
     <h2>예매율</h2>
-    <p>2위 (18.4%)</p>
+    <p><strong>2</strong>위 (18.4%)</p>
     <h2>누적관객수</h2>
-    <p>2,056,050명</p>
+    <p><strong>2,056,050</strong>명</p>
     ---
     <!-- 하단 설명 -->
     <h2>주요정보</h2>
-    <p>"나의 딸은 좀비다. 이 세상 마지막 남은 유일한 좀비"</p>
+    <h2>실관람평</h2>
+    <h2>예고편/스틸컷</h2>
+    <!-- 주요정보 내용 -->
+    <p><em>나의 딸은 좀비다. 이 세상 마지막 남은 유일한 좀비"</em>
+    </p>
     <p>댄스 열정을 불태우는 사춘기 딸 ‘수아’와 함께 티격태격 일상을 보내는 맹수 전문 사육사 ‘정환’.<br>
         어느 날 전 세계를 강타한 좀비 바이러스에 감염된 딸 '수아'를 지키기 위해<br>
         '정환'은 어머니 '밤순'이 사는 바닷가 마을 '은봉리'로 ‘수아’와 함께 향한다.
@@ -43,7 +47,18 @@
     <p>맹수보다 사납고, 사춘기보다 예민한 좀비딸 훈련기!<br>
         올여름, 가장 유쾌한 극비 프로젝트가 시작된다!
     </p>
-    <h2>실관람평</h2>
-    <h2>예고편/스틸컷</h2>
+    <!-- 회사정보 -->
+    <h2>회사소개</h2>
+    <h2>인재채용</h2>
+    <h2>사회공헌</h2>
+    <h2>제휴/광고/부대사업문의</h2>
+    <h2>이용약관</h2>
+    <h2>위치기반서비스 이용약관</h2>
+    <h2>개인정보처리방침</h2>
+    <h2>윤리경영</h2>
+    <h1>MEGABOX로고</h1>
+    <p>서울특별시 강남구 테헤란로 87길 22 도심공항터미널 건물 408호 ARS 1544-0070 대표이메일 m.dreamcenter@partner.megabox.co.kr<br>
+        대표자명 홍정인, 남용석 · 개인정보보호책임자 김수현 · 사업자등록번호 211-86-59478 · 통신판매업신고번호 2025-서울강남-00722<br>
+        COPYRIGHT © MegaboxJoongAng, Inc. All rights reserved</p>
 </body>
 </html>
