--- a/basic.HTML
+++ b/basic.HTML
@@ -37,5 +37,10 @@
     <!-- s, del 교체 or 삭제 텍스트 -->
     <p>원가 : <del>32,000원</del></p>
     <p>할인가 : <em>20,000원</em></p>
+    <!-- blockquote / 인용글 -->
+    <blockquote>
+        장애에 구애없이 모든 사람들이 평등하게
+        웹을 이용할 수 있어야 한다.
+    </blockquote>
 </body>
 </html>
