추가 및 보완

--- a/basic_megabox1.html
+++ b/basic_megabox1.html
@@ -16,7 +16,7 @@
     <h2>이벤트</h2>
     <h2>스토어</h2>
     <h2>혜택</h2>
-    ---
+    <hr>
     <!-- 메인화면 -->
     <h1>좀비딸</h1>
     <p>My Daughter is a Zombie</p>
@@ -28,6 +28,7 @@
     <p><strong>2,056,050</strong>명</p>
     ---
     <!-- 하단 설명 -->
+     <hr>
     <h2>주요정보</h2>
     <h2>실관람평</h2>
     <h2>예고편/스틸컷</h2>
@@ -47,6 +48,7 @@
     <p>맹수보다 사납고, 사춘기보다 예민한 좀비딸 훈련기!<br>
         올여름, 가장 유쾌한 극비 프로젝트가 시작된다!
     </p>
+    <hr>
     <!-- 회사정보 -->
     <h2>회사소개</h2>
     <h2>인재채용</h2>
@@ -57,8 +59,11 @@
     <h2>개인정보처리방침</h2>
     <h2>윤리경영</h2>
     <h1>MEGABOX로고</h1>
-    <p>서울특별시 강남구 테헤란로 87길 22 도심공항터미널 건물 408호 ARS 1544-0070 대표이메일 m.dreamcenter@partner.megabox.co.kr<br>
+    <!-- 회사정보 / address 코드 -> 자회사 정보만 작성. 블록태그. 협력업체및 다른 주소는 adress에 묶지 않는다.-->
+    <hr>
+    <address>서울특별시 강남구 테헤란로 87길 22 도심공항터미널 건물 408호 ARS 1544-0070 대표이메일 m.dreamcenter@partner.megabox.co.kr<br>
         대표자명 홍정인, 남용석 · 개인정보보호책임자 김수현 · 사업자등록번호 211-86-59478 · 통신판매업신고번호 2025-서울강남-00722<br>
-        COPYRIGHT © MegaboxJoongAng, Inc. All rights reserved</p>
+        COPYRIGHT &copy;MegaboxJoongAng, Inc. All rights reserved
+    </address>
 </body>
 </html>
