--- a/basic.HTML
+++ b/basic.HTML
@@ -32,9 +32,9 @@
     <!-- HTML은 구조, CSS 디자인, js 동작 -->
     <!-- HTML 암기 시 html이 가지는 디자인 형태는 무시하고 의미를 기억하자. / 모든 디자인은 CSS에서 진행된다. -->
     ---
-    <!-- sub, sup / 아래첨자 윗첨자 -->
+    <!-- sub, sup / 아래첨자 윗첨자 / 인라인 태그 -->
     <p>123<sub>4</sub><sup>5</sup></p>
-    <!-- s, del 교체 or 삭제 텍스트 -->
+    <!-- s, del 교체 or 삭제 텍스트 / 인라인 태그-->
     <p>원가 : <del>32,000원</del></p>
     <p>할인가 : <em>20,000원</em></p>
     <!-- blockquote / 인용글 -->
@@ -42,5 +42,16 @@
         장애에 구애없이 모든 사람들이 평등하게
         웹을 이용할 수 있어야 한다.
     </blockquote>
+    <!-- q 짧은 이용문 / 블록 내 인용문을 표시할때 / 인라인 태그 -->
+    <p>웹의 아버지 팀버너스리는 <q>장애에
+        구애없이 모든 사람들이 평등하게 웹을
+        이용할 수 있어야 한다.</q> 라고 말했다.
+    </p>
+    <!-- code 컴퓨터가 지원하는 다양한 명령어를 화면 표시할 경우 / 인라인 태그 -->
+    <!-- 꺾새를 표현하고 싶다면 "&;"을 쓸 것 / 보여질 부분 Start를 &로 시작하고, End가 ;이 된다. &lt;h1&gt;이렇게 쓰면 <h1>이라고 표시되게 된다. -->
+    <p><code>&lt;h1&gt;&lt;/h1&gt;</code>대제목</p>
+    <p>&copy;</p>
+    <!-- address 연락처, 회사소개, 고객센터 등 묶어주는 블록 태그 / 웹사이트의 관련 연락처, 소개, 고객센터. -->
+    <!-- hr 사이트의 각 영역을 구분할 때 사용. css에서는 표현하지 않고, 숨기는 경우가 대부분. 주석과 같이 태그 구조 이해에 주용도로 사용. -->
 </body>
 </html>
