--- a/basic_w3c.html
+++ b/basic_w3c.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="정보통신접근성, 웹전근성, 한국웹전근성인증평가원, 한국웹접근성">
     <meta name="description" content="정보통신접근성 (Web접근성)이란?
     정보통신접근성 (Web 접근성)은 「지능정보화기본법」에 따라 장애인이나 고령자분들이 웹 사이트에서 제공하는 정보를 비장애인과 동등하게 접근하고 이용 할 수 있도록 보장하는 것으로 웹 접근성 준수는 법적의무사항 입니다.">
-    <title>WA &gt; 웹접근성이란? | 한국웹접근성인증평가원</title>
+    <title>웹접근성이란? | 한국웹접근성연구소</title>
 </head>
 <body>
-    <!-- 한국웹접근성인증평가원 로고 -->
-    <h1>한국웹접근성인증평가원</h1>
+    <!-- 1. 한국웹접근성인증평가원 로고 + 메뉴 / 레이아웃 태그 필요없음 -->
+    <h1>한국장애인단체총연합회 / 한국웹접근성인증평가원
+    </h1>
     <hr>
+    <!-- 가로 1행 기준으로 같은 행에 있는 콘텐츠 /특히 카테고리/ 를 묶어준다. -->
     <h2>WA</h2>
     <h2>키오스크</h2>
     <h2>MA</h2>
@@ -21,8 +23,13 @@
     <h2>자료실</h2>
     <h2>인증평가원 소개</h2>
     <hr>
-    <!-- 좌측 카테고리 -->
-    <h2>웹접근성이란</h2>
+    <!-- 2. 내용 시작 -->
+    <h2>WA</h2>
+    <p>편견과 차별을 없애기 위해 노력하는<br>
+    <em>한국웹접근성인증평가원</em>입니다.</p>
+    <hr>
+    <!-- 3. 좌측 하위 카테고리 -->
+    <h3>웹접근성이란</h3>
     <h3>관련법규</h3>
     <h3>심사절차</h3>
     <h3>심사기준</h3>
@@ -32,29 +39,26 @@
     <h3>(신)인증현황</h3>
     <h3>(구)인증현황</h3>
     <hr>
-    <!-- 소개글 -->
-    <blockquote>편견과 차별을 없애기 위해 노력하는 <strong>한국웹접근성인증평가원</strong>입니다.</blockquote>
-    <hr>
-    <!-- 웹 접근성 내용 소개 -->
-    <h1><em>웹 접근성이란?</em></h1>
-    <h1><strong>정보통신접근성</strong>(web접근성)이란?</h1>
-    <h2>정보통신접근성 (web접근성)이란?</h2>
-    <p>정보통신접근성 (Web 접근성)은 「지능정보화기본법」에 따라 장애인이나 고령자분들이 웹 사이트에서 제공하는 정보를 비장애인과 동등하게 접근하고<br>
-        이용 할 수 있도록 보장하는 것으로 웹 접근성 준수는 법적의무사항 입니다.</p>
+    
+    <!-- 4. 우측 내용 -->
+    <h1><em>웹접근성이란?</em></h1>
+    <p>홈 &gt; WA &gt; 웹접근성이란?</p>
+    <!-- 정보통신접근성 내용 -->
+    <h2><strong>정보통신접근성</strong>(web접근성)이란?</h2>
+    <h3>정보통신접근성 (web접근성)이란?</h3>
+    <p>정보통신접근성 (Web 접근성)은 「지능정보화기본법」에 따라 장애인이나
+    고령자분들이 웹 사이트에서 제공하는 정보를 비장애인과 동등하게 접근하고
+    이용 할 수 있도록 보장하는 것으로 웹 접근성 준수는 법적의무사항 입니다.</p>
     <hr>
     <!-- 웹 접근성 준수 고려사항 -->
-    <h2>웹 접근성 준수 고려사항</h2>
-        <h3>시각</h3>
-        <p>실명, 색각이상, 다양한 형태의<br>
-        저시력을 포함한 시각 장애</p>
-        <h3>이동성</h3>
-        <p>파킨슨병, 근육병, 뇌성마비,<br>
-        뇌졸중과 같은 조건으로 인한<br>
-        근육 속도 저하, 근육 제어 손실로 말미암아<br>
-        손을 쓰기 어렵거나 쓸 수 없는 상태</p>
-        <h3>청각</h3>
-        <p>실명, 색각이상, 다양한 형태의 저시력을 포함한 시각 장애</p>
-        <h3>시각</h3>
-        <p>실명, 색각이상, 다양한 형태의 저시력을 포함한 시각 장애</p>
+    <h3>웹 접근성 준수 고려사항</h3>
+    <h4>01 시각</h4>
+    <p>실명, 색각이상, 다양한 형태의 저시력을 포함한 시각 장애</p>
+    <h4>02 이동성</h4>
+    <p>파킨슨병, 근육병, 뇌성마비, 뇌졸중과 같은 조건으로 인한 근육 속도 저하, 근육 제어 손실로 말미암아 손을 쓰기 어렵거나 쓸 수 없는 상태</p>
+    <h4>03 청각</h4>
+    <p>영상, 음성 콘텐츠에 자막, 원고, 수화 등의 대체수단 부재로 인한 인식이 불가능한 상태
+    <h4>04 인지</h4>
+    <p>문재 해결과 논리 능력, 집중력, 기억력에 문제가 있는 성진 지체 및 발달 장애, 학습 장애 (난독증, 난산증 등)</p>
 </body>
 </html>
