--- a/layout_recipe.html
+++ b/layout_recipe.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- 백종원 김치볶음밥 레시피 -->
-    <div class="recipe_contets">
+    <div id="recipe_contets">
         <!-- 서론 -->
         <h1>백종원 김치볶음밥 레시피 누구나 쉽게 만드는 팁까지,</h1>
         <p>요리 하면 백선생님을 모르는 사람이 없을정도죠^^ 레시피계에서 따라하면 실패확률이 거의 없는<br>
