--- a/layout_recipe.html
+++ b/layout_recipe.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="백종원 김치볶음밥, 레시피, 김치볶음밥 레시피, 백종원 레시피">
-    <meta name="description" content="요리 하면 백선생님을 모르는 사람이 없을정도죠^^ 레시피계에서 따라하면 실패확률이 거의 없는 금손 레시피, 누구나 쉽게 만드는 TIP도 챙겨가세요!">
-    <title>Document</title>
+    <meta name="description" content="백종원의 김치볶음밥 레시피">
+    <title>백종원 김치볶음밥 레시피 | 만개의레시피</title>
 </head>
 <body>
     <!-- 백종원 김치볶음밥 레시피 -->
-    <div id="recipe_contets">
+    <div id="recipe">
         <!-- 서론 -->
         <h1>백종원 김치볶음밥 레시피 누구나 쉽게 만드는 팁까지,</h1>
-        <p>요리 하면 백선생님을 모르는 사람이 없을정도죠^^ 레시피계에서 따라하면 실패확률이 거의 없는<br>
+        <p>요리 하면 백선생님을 모르는 사람이 없을정도죠^^ 레시피계에서 따라하면 실패확률이 거의 없는
         금손 레시피, 누구나 쉽게 만드는 TIP도 챙겨가세요!</p>
         <hr>
         <!-- N인분 및 조리시간 -->
-        <div class="container">
-            <h2>1인분</h2>
-            <h2>10분 이내</h2>
-            <h2>아무나</h2>
+        <div class="information">
+            <p>1인분</P>
+            <p>10분 이내</p>
+            <P>아무나</P>
         </div>
         <hr>
         <!-- 프로필 -->
         <div class="profile">
-            <h1>먹순</h1>
+            <h2>먹순</h2>
             <p>따라하기 쉬운 다양하고 맛있는 레시피를 소개합니다.</p>
         </div>
     </div>
