--- a/layout_recipe.html
+++ b/layout_recipe.html
@@ -23,7 +23,7 @@
         </div>
         <hr>
         <!-- 프로필 -->
-        <div class="profile">
+        <div class="author">
             <h2>먹순</h2>
             <p>따라하기 쉬운 다양하고 맛있는 레시피를 소개합니다.</p>
         </div>
