--- a/layout_recipe.html
+++ b/layout_recipe.html
@@ -28,5 +28,41 @@
             <p>따라하기 쉬운 다양하고 맛있는 레시피를 소개합니다.</p>
         </div>
     </div>
+    <hr>
+    <!-- 조리순서 시작 -->
+    <div id="sequence">
+        <div class="top">
+            <h2>조리순서</h2>
+            <div class="view_right">
+                <div class="image_select">
+                    <p>이미지로 보기</p>
+                    <p>썸네일로 보기</p>
+                    <p>글자로 보기</p>
+                </div>
+                <p>전체보기</p>
+            </div>
+        </div>
+        <hr>
+        <!-- 조리순서 소개 -->
+        <div class="contents">
+            <div class="1">
+                <p>
+                    <strong>1.</strong>
+                    <span>대파 1대는 송송 썰어주세요. 파는 많을수록 파기름을
+                    내주어 맛있답니다</span>
+                </p>
+                <p>&dot;도마 , 조리용나이프</p>
+            </div>
+            <div class="2">
+                <p>
+                    <strong>2.</strong>
+                    <span>김치는 도마에서 자르면 김칫국물이 베이기 때문에
+                    그릇에 넣고 가위로 대강 잘게 잘라주세요.</span>
+                </p>
+                <p>&dot;볼, 주방가위</p>
+                <p>&dot;집에 신김치가 없다면 식초를 1T 넣어 신김치를 만들어줘도 좋아요. 반대로 김치가 너무 시다면 설탕을 1T 넣어 신맛을 잡아주세요.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
