250806 수업 내용 총정리

--- a/layout_recipe.html
+++ b/layout_recipe.html
@@ -51,7 +51,7 @@
                     <span>대파 1대는 송송 썰어주세요. 파는 많을수록 파기름을
                     내주어 맛있답니다</span>
                 </p>
-                <p>&dot;도마 , 조리용나이프</p>
+                <p class="utensil">&dot;도마 , 조리용나이프</p>
             </div>
             <div class="2">
                 <p>
@@ -59,7 +59,7 @@
                     <span>김치는 도마에서 자르면 김칫국물이 베이기 때문에
                     그릇에 넣고 가위로 대강 잘게 잘라주세요.</span>
                 </p>
-                <p>&dot;볼, 주방가위</p>
+                <p class="utensil">&dot;볼, 주방가위</p>
                 <p>&dot;집에 신김치가 없다면 식초를 1T 넣어 신김치를 만들어줘도 좋아요. 반대로 김치가 너무 시다면 설탕을 1T 넣어 신맛을 잡아주세요.</p>
             </div>
         </div>
