--- a/basic_link.html
+++ b/basic_link.html
@@ -15,4 +15,6 @@
     <h2>상대경로</h2>
     <p>현재 작업파일 기준으로 다른 파일을 연결하는 것을 상대경로라고 한다.</p>
     <a href="./layout_w3c.html">웹접근성연구소 결과보기</a>
+    <a href="./layout_recipe.html">만개의 레시피 결과보기</a>
+    <a href="./basic_megabox1.html">메가박스 영화소개 페이지보기</a>
 </html>
