--- a/basic_link.html
+++ b/basic_link.html
@@ -17,4 +17,17 @@
     <a href="./layout_w3c.html">웹접근성연구소 결과보기</a>
     <a href="./layout_recipe.html">만개의 레시피 결과보기</a>
     <a href="./basic_megabox1.html">메가박스 영화소개 페이지보기</a>
+    <hr>
+    <h3>현재 경로 파일</h3>
+    <p>현재 경로<em>(./)</em>로 시작하며, 파일은 확장자를 반드시 포함시켜야 한다.</p>
+    <a href="./README.md">read me 파일 보기</a>
+    <h3>현재 경로 폴더 / 파일</h3>
+    <p>현재 경로<code>(./)</code>로 시작하며 원하는 파일이 있는 폴더를 경로에 추가하고 마지막 파일은 확장자를 포함하여 작성한다.</p>
+    <a href="./images/aoa_banner.jpg">배너보기</a>
+    <h3>상위 경로 파일</h3>
+    <p>연결 파일이 현재경로 기준 위에 있는 경우 상위 <code>(../)</code>를 작성한다. 두번 위에 있는 경우에는 <code>(../../)</code>를 작성한다.</p>
+    <a href="../Photoshop/result/Net_mesh_City pop.jpg">결과보기</a>
+    <p>한글, 특수문자, 공백 사용금지</p>
+    <a href="#">준비된 페이지가 없을 경우<!-- 임시링크 -->/a>
+    </body>
 </html>
