--- a/basic_list.html
+++ b/basic_list.html
@@ -125,20 +125,17 @@
             <ul class="lnb_2">
                 <li>
                     <a href="#">여성패션</a>
-                        <ul>
-                            <li>
-                                <a href="#">의류</a>
-                                <a href="#">신발</a>
-                                <a href="#">가방/잡화</a>
-                            </li>
-                        </ul>
+                    <ul>
+                        <li><a href="#">의류</a></li>
+                        <li><a href="#">신발</a></li>
+                        <li><a href="#">가방/잡화</a></li>
+                    </ul>
                     <a href="#">남성패션</a>
                     <ul>
-                        <li>
-                            <a href="#">의류</a>
-                            <a href="#">신발</a>
-                            <a href="#">가방/잡화</a>
-                        </li>
+                    <li><a href="#">의류</a></li>
+                    <li><a href="#">신발</a></li>
+                    <li><a href="#">가방/잡화</a></li>
+                        
                     </ul>
                 </li>
             </ul>
