--- a/layout_recipe.html
+++ b/layout_recipe.html
@@ -43,6 +43,22 @@
             </div>
         </div>
         <hr>
+        <!-- 재료 ingredient -->
+        <div id="ingredient">
+            <div class=head>
+                <h1>재료</h1>
+                <a href="#"><span>재료계량안내</span><img src="#" alt="화살표 아이콘"></a>
+            </div>
+            <div class="button">
+                <a href="search"><img src="#" alt="돋보기"><span>재료검색</span></a>
+                <a href="search"><img src="#" alt="쇼핑카트"><span>장보기</span></a>
+                <a href="search"><img src="#" alt="물음표말풍선"><span>Q&A</span></a>
+                <a href="search"><img src="#" alt="공책"><span>노트</span></a>
+            </div>
+            <hr>
+            <h2>재료</h2>
+            <ul class="ingredient"></ul>
+        </div>
         <!-- 조리순서 소개 -->
         <div class="contents">
             <div class="1">
