--- a/basic_list.html
+++ b/basic_list.html
@@ -141,5 +141,82 @@
             </ul>
         </li>
     </ul>
+    <hr>
+    <p>2개 이상 연속내용 - 목록화 li 태그 </p>
+    <p>목록이 순서가 있으면 (ol) 없으면 (ul) 그룹 목록 태그</p>
+    <h2>웹접근성</h2>
+    <ul>
+        <li>이미지 태그 사용시 대체 텍스트 alt를 사용해야 한다.</li>
+        <li>동영상 태그 사용 시 autoplay는 반드시 muted와 함께 해야한다.</li>
+    </ul>
+    <hr>
+    <h1>정의형 목록태그</h1>
+    <dl><!-- 정의형 목록 그룹 -->
+        <dt>정의형 제목</dt> <!-- h1 대체금지 -->
+        <dd>정의형 내용 1</dd>
+        <dd>정의형 내용 2</dd>
+    </dl>
+    <hr>
+    <!-- 네이버 영한 사전 -->
+    <div class="dictionary">
+        <div class="title"><h2>단어·숙어</h2><p>57</p></div>
+        <dl class="word">
+            <dt>
+                <a href="#">HTML</a>
+                <a href="#"><img src="#" alt="단어장 저장"></a>
+            </dt>
+            <dd>
+            <strong>약어</strong>
+            <em>컴퓨터</em>
+            <span>하이퍼텍스트 기술용 언어(
+                <span>Hypertext</span>
+                <span>Mark-up</span>
+                <span>language</span>
+            )
+            </span>
+            </dd>
+            <dd class="listening">
+                <p><strong>미국·영국</strong>
+                    <span>[ˌeɪtʃ tiː em ˈel]</span>
+                    <strong>미국식</strong>
+                    <span>[ˌeɪtʃtiː em ˈel]</span>
+                </p>
+                <div class="country">
+                    <a href="#"><img src="#" alt="스피커">all</a>
+                    <a href="#"><img src="#" alt="미국국기"></a>
+                    <a href="#"><img src="#" alt="영국국기"></a>
+                    <a href="#"><img src="#" alt="호주"></a>
+                    <a href="#"><img src="#" alt="인도"></a>
+                </div>
+            </dd>
+            <dd><a href="#" target="_blank">옥스퍼드 영한사전</a></dd>
+        </dl>
+    </div>
+    <hr>
+    <div id="recipe_material">
+        <div class="title">
+            <h2>재료</h2>
+            <a href="#"><span>재료 계량 안내</span><img src="#" alt="화살표"></a>
+        </div>
+        <div class="butten">
+            <a href="#"><img src="#" alt="돋보기"><span>재료검색</span></a>
+            <a href="#"><img src="#" alt="쇼핑카트"><span>장보기</span></a>
+            <a href="#"><img src="#" alt="질문"><span>Q&A</span></a>
+            <a href="#"><img src="#" alt="공책"><span>노트</span></a>
+        </div>
+        <h3>재료</h3>
+        <ul class="material">
+            <li>
+                <a href="#">밥</a>
+                <span>1공기</span>
+                <a href="#" class="purchase">구매</a>
+            </li>
+            <li>
+                <a href="#">신김치</a>
+                <span>1/2공기</span>
+                <a href="#" class="purchase">구매</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
