--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <li><img src="./images/arrow.png" alt="바로가기"><a href="./ohou_product.html" target="_blank">오늘의 집</a></li>
                 <li><img src="./images/arrow.png" alt="바로가기"><a href="./soopsori.html" target="_blank">숲소리</a></li>
             </ul>
-            <h2>과제제출</h2>
+            <h2>과제제출!</h2>
             <ul class="result">
                 <li><img src="./images/arrow.png" alt="바로가기"><a href="#">대백과사전 HTML</a></li>
             </ul>
