250812_한국민족문화대백과사전

--- a/task/encykorea_250812.html
+++ b/task/encykorea_250812.html
@@ -10,8 +10,8 @@
 <body>
     <main id="wrap">
         <div class="header">
-            <a href="https://encykorea.aks.ac.kr/">
-                <img src="https://encykorea.aks.ac.kr/Assets/images/common/sub_main_mobile_logo.png" alt="한국민족문화대백과사전">
+            <a href="">
+                <img src="#" alt="한국민족문화대백과사전">
             </a>
             <div class="gnb">
                 <a href="#"><span>분야</span></a>
