--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
     <div id="wrap">
         <header class="title">
-            <p class="profile_img"><img src="/images/profile_photo.jpg" alt="메인화면_이미지"></p>
+            <p class="profile_img"><img src="./images/profile_photo.jpg" alt="메인화면_이미지"></p>
             <h1>Mabonsik
             </h1>
             <h2>UI/UX 프론트엔드 반응형웹디자인&웹퍼블리셔 개발 양성과정</h2>
@@ -94,13 +94,13 @@
             <div class="inline">span, em, strong, br, img, a, sup, sub, code, mark, s, q, del</div>
             <h2 class="direct">작업결과 바로가기</h2>
             <ul class="result">
-                <li><img src="./images/arrow.png" alt="바로가기"><a href="./leeddeok.html" target="_blank">이낙근찹쌀떡</a></li>
-                <li><img src="./images/arrow.png" alt="바로가기"><a href="./ohou_product.html" target="_blank">오늘의 집</a></li>
-                <li><img src="./images/arrow.png" alt="바로가기"><a href="./soopsori.html" target="_blank">숲소리</a></li>
+                <li><img src="./FIGMA/layout/images/arrow.png" alt="바로가기"><a href="./leeddeok.html" target="_blank">이낙근찹쌀떡</a></li>
+                <li><img src="./FIGMA/layout/images/arrow.png" alt="바로가기"><a href="./ohou_product.html" target="_blank">오늘의 집</a></li>
+                <li><img src="./FIGMA/layout/images/arrow.png" alt="바로가기"><a href="./soopsori.html" target="_blank">숲소리</a></li>
             </ul>
             <h2>과제제출!</h2>
             <ul class="result">
-                <li><img src="./images/arrow.png" alt="바로가기"><a href="#">대백과사전 HTML</a></li>
+                <li><img src="./FIGMA/layout/images/arrow.png" alt="바로가기"><a href="./task/encykorea_250812.html">대백과사전 HTML</a></li>
             </ul>
         </main>
         <footer>
