--- a/figma_layout/table2.html
+++ b/figma_layout/table2.html
@@ -7,21 +7,142 @@
     <meta name="keywords" content="\">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css">
     <title>Document</title>
+    <style>
+        /* table */
+        table#pay{width: 1110px; margin-top: 20px; margin-left: 20px;}
+        /* table-thead */
+        table#pay thead{
+            border-top: 2px solid #000; border-bottom: 2px solid #555;
+            background-color: #fafafa;
+        }
+        table#pay thead tr th:first-child{width: 150px;}
+        table#pay thead tr:first-child th h1{
+            font-size: 1.25rem;
+            font-weight: 600;
+            padding-bottom: 12px;}
+        table#pay thead tr:first-child th p{color: #777777}
+        table thead tr:nth-child(1) th {padding-top: 30px; padding-bottom: 30px;}
+        table#pay thead tr:nth-child(2) {
+            border-top: 1px  dashed #555555;
+            }
+        table#pay thead tr:nth-child(2) th{
+            padding-top: 34.5px;
+            padding-bottom: 34.5px;
+            font-size:1.125rem;
+            font-weight: 600;
+        }
+        table#pay thead tr:nth-child(2) th p{
+            font-size: 1.125;
+            font-weight: 700;
+            line-height: 150%;
+        }
+        table#pay thead tr:nth-child(2) th span{
+            font-size: 0.875rem;
+            color: #777777;
+        }
+        table#pay thead tr:nth-child(2) th:last-child{
+            padding-right: 20px ;
+        }
+        table#pay thead tr th:nth-child(2){
+            width: 350px;
+        }
+        table#pay thead tr th:nth-child(3){width: 170px;}
+        table#pay thead tr th:last-child{width: 170px;}
+        /* tbody */
+        table#pay tbody{
+        }
+        table#pay tbody tr {border-bottom: solid 1px #DDD;}
+        table#pay tbody tr th{width: 250px; font-weight: 500; padding-top:20px; padding-bottom: 20px;}
+        table#pay tbody tr td{text-align: center; font-weight: 500;}
+        table#pay tbody tr td:first-child{width: 150px;}
+        table#pay tbody tr td:nth-child(2){width: 350px;}
+        table#pay tbody tr td:nth-child(3){width: 170px;}
+        table#pay tbody tr td:last-child{width: 170px; padding-right: 20px;}
+        table#pay tbody tr td em{color: #ee239B; font-weight: 600;}
+    </style>
 </head>
 <body>
     <!-- colspan (수평열 합치기) -->
+    <!-- <h1>행/열 합치기</h1>
+    <table id="tset" style="border:1px solid #000">
+        <tr>
+            <td rowspan="2" style="border:1px solid #000">1</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>4</td>
+        </tr>
+    </table>
     <h1>행/열 합치기</h1>
     <table id="tset" style="border:1px solid #000">
         <tr>
-            <td colspan="2" style="border:1px solid #000">1</td>
-            <!-- <td>2</td> -->
+            <td>1</td>
+            <td rowspan="2" style="border:1px solid #000">2</td>
         </tr>
         <tr>
             <td>3</td>
-            <td>4</td>
         </tr>
+    </table>
+    <h1>행/열 합치기</h1>
+    <table id="tset" style="border:1px solid #000">
+        <tr>
+            <td>1</td>
+            <td rowspan="2" style="border:1px solid #000">2</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>6</td>
+        </tr>
+    </table> -->
+    <table id="pay">
+        <thead>
+            <tr>
+                <th rowspan="2"><img src="./images/phone_img.png" alt="전화아이콘"></th>
+                <th colspan="4">
+                    <h1>선불요금제(국제전화)</h1>
+                    <p>합리적인 선불요금제에 국제전화 혜택을 더한 알뜰한 요금제!</p>
+                </th>
+                <!-- <th>합쳐짐</th>
+                <th>합쳐짐</th>
+                <th>합쳐짐</th> -->
+            </tr>
+            <tr>
+                <!-- <th>합쳐짐</th> -->
+                <th><p>기본요금<br>
+                    <span>(부가세 포함금액)</span></p>
+                </th>
+                <th>음성</th>
+                <th>문자</th>
+                <th>데이터</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>국제선불 300M</th>
+                <td><em>40,700</em>원</td>
+                <td>집/이동전화 무제한(국제전화 매일 20분)</td>
+                <td>기본제공</td>
+                <td>300MB+3Mbps</td>
+            </tr>
+            <tr>
+                <th>국제선불 300M</th>
+                <td><em>40,700</em>원</td>
+                <td>집/이동전화 무제한(국제전화 매일 20분)</td>
+                <td>기본제공</td>
+                <td>300MB+3Mbps</td>
+            </tr>
+            <tr>
+                <th>국제선불 300M</th>
+                <td><em>40,700</em>원</td>
+                <td>집/이동전화 무제한(국제전화 매일 20분)</td>
+                <td>기본제공</td>
+                <td>300MB+3Mbps</td>
+            </tr>
+        </tbody>
+        
     </table>
 </body>
 </html>
