--- a/figma_layout/table2.html
+++ b/figma_layout/table2.html
@@ -61,6 +61,16 @@
         table#pay tbody tr td:nth-child(3){width: 170px;}
         table#pay tbody tr td:last-child{width: 170px; padding-right: 20px;}
         table#pay tbody tr td em{color: #ee239B; font-weight: 600;}
+        /* git 명령어 표 그룹선택자 */
+        #git{}
+        #git thead tr {}
+        #git thead tr th {border: solid 1px #000;}
+        #git tbody {}
+        #git tbody tr {}
+        #git tbody tr th{}
+        #git tbody tr th,
+        #git tbody tr td {border: solid 1px #000;}
+        #git tbody tr td {}
     </style>
 </head>
 <body>
@@ -142,7 +152,41 @@
                 <td>300MB+3Mbps</td>
             </tr>
         </tbody>
-        
+    </table>
+    <table id="git">
+        <thead class="git_head">
+            <tr>
+                <th id="kind" scope="col">프로그래밍 종류</th>
+                <th id="command" scope="col">명령어</th>
+                <th id="explain" scope="col">해석</th>
+            </tr>
+        </thead>
+        <tbody class="git_body">
+            <!-- 1 -->
+            <tr>
+                <th scope="row" rowspan="4" class="name">GIT</th>
+                <th scope="row">git init</th>
+                <td>깃 폴더 최초 경로 설정</td>
+            </tr>
+            <!-- 2 -->
+            <tr>
+                <!-- <th class="name">GIT</th> -->
+                <th scope="row">git remote add origin</th>
+                <td>깃 허브 원격 저장소 연결</td>
+            </tr>
+            <!-- 3 -->
+            <tr>
+                <!-- <th class="name">GIT</th> -->
+                <th scope="row">git status</th>
+                <td>파일 변경상태 & 스테이징 대기 상태</td>
+            </tr>
+            <!-- 4 -->
+            <tr>
+                <!-- <th class="name">GIT</th> -->
+                <th scope="row">git log</th>
+                <td>push로 upload한 기록을 commit과 함께 보여주는 명령어</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
