--- a/figma_layout/form/google_login.html
+++ b/figma_layout/form/google_login.html
@@ -34,13 +34,14 @@
                     <dt class="pass">password</dt>
                     <dd><input type="password" name="user_pw" id="user_pw" class="idpw" placeholder="Enter your Password"></dd>
                 </dl>
+                    <p class="error">Please enter your ID.</p>
             </fieldset>
             <fieldset class="btn_search_group">
                 <legend>버튼 & 찾기</legend>
                 <h2>forgot password</h2>
                 <p><button type="submit" id="login_btn" class="btn">login</button></p>
                 <p id="sign_in_google"><a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%2F&dsh=S-1927394875%3A1755489541673683&ec=futura_exp_og_so_72776762_e&flowEntry=ServiceLogin&flowName=GlifWebSignIn&hl=ko&ifkv=AdBytiN-Vf3h93vALKWCHP-c_TwrA0mCq4ytXw8izD1qX9nxKzbApjrEsIDqSjlK-Rh3I9Iewsxe1g" target="_blank" class="btn">Sign in with Google</a></p>
-                    <p class="no-account">Don't have on account?<a href="#" class="sign_up">Sign up for free</a></p>
+                <p class="no-account">Don't have on account?<a href="#" class="sign_up"> Sign up for free</a></p>
             </fieldset>
         </form>
         <!-- <h2>Email</h2>
