250819 Spotify login add

--- a/figma_layout/form/spotify_login.html
+++ b/figma_layout/form/spotify_login.html
@@ -37,7 +37,7 @@
                     <label for="login_y">stay signed in</label>
                 </div>
                 <div class="btn_forget">
-                    <button type="submit" id="sign_in_btn">sign in</button>
+                    <button type="submit" id="sign_in_btn">SIGN IN</button>
                     <p><a href="#" class="forget_pw">Forget Password?</a></p>
                 </div>
                 
