--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/soopsori.html" target="_blank">숲소리</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/form/google_login.html" target="_blank">구글 로그인</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/form/spotify_login.html" target="_blank">스포티파이 로그인</a></li>
+                <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/form/market_join/join.html" target="_blank">마켓컬리 회원가입</a></li>
             </ul>
             <h2>과제제출!</h2>
             <ul class="result">
