오늘의 집 수정

--- a/figma_layout/ohou/join.html
+++ b/figma_layout/ohou/join.html
@@ -49,9 +49,9 @@
                 </dl>
             </fieldset>
             <fieldset>
-                <legend id="agreement">약관동의</legend>
                 <dl>
-                    <dt id="agree_all">전체동의</dt>
+                    <legend id="agreement"><dt>약관동의</dt></legend>
+                    <dd>전체동의</dd>
                     <dd>만 14세 이상입니다.<em>필수</em></dd>
                     <dd>만 14세 이상입니다.<em>필수</em></dd>
                     <dd>만 14세 이상입니다.<em>필수</em></dd>
