250822 오늘의집 index to login and join

--- a/figma_layout/ohou/index.html
+++ b/figma_layout/ohou/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
     <title>라이프 스타일 슈퍼앱 | 오늘의 집</title>
@@ -16,15 +17,10 @@
         <h1><a href="./index.html"><img src="./images/logo.png" alt="오늘의 집"></a></h1>
         <h1>오늘의 집</h1>
         <p>라이프 스타일 슈퍼앱, 오늘의 집</p>
-        <div id="icon">
-            <a href="#" class="icon_fb"><img src="./images/facebook.png" alt="페이스북"></a>
-            <a href="#" class="icon_kakao"><img src="./images/kakao.png" alt="카카오"></a>
-            <a href="#" class="icon_naver"><img src="./images/naver.png" alt="네이버"></a>
-        </div>
-        <div id="btn">
-            <p class="login"><a href="./login.html">로그인하기</a></p>
-            <p class="join"><a href="./join.html">회원가입하기</a></p>
-        </div>
+        <div class="link_g">
+            <a href="./login.html" class="login">로그인하기</a> 
+            <a href="./join.html" class="join">회원가입하기</a>
+        </div> 
     </div>
 </body>
 </html>
