--- a/index.html
+++ b/index.html
@@ -92,14 +92,18 @@
                 header, main, section, aside, nav, footer, article, a, video
             </div>
             <div class="inline">span, em, strong, br, img, a, sup, sub, code, mark, s, q, del</div>
-            <h2 class="direct">작업결과 바로가기</h2>
+            <h2 class="direct">HTML작업결과 바로가기</h2>
             <ul class="result">
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/" target="_blank">이낙근찹쌀떡</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/ohou_product.html" target="_blank">오늘의 집</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/soopsori.html" target="_blank">숲소리</a></li>
+            </ul>
+            <h2 class="direct">HTML + CSS 작업결과</h2>
+            <ul class="result">
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/form/google_login.html" target="_blank">구글 로그인</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/form/spotify_login.html" target="_blank">스포티파이 로그인</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/form/market_join/join.html" target="_blank">마켓컬리 회원가입</a></li>
+                <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/ohou/index.html" target="_blank">오늘의 집 회원가입</a></li>
             </ul>
             <h2>과제제출!</h2>
             <ul class="result">
