--- a/task/musescore_login.html
+++ b/task/musescore_login.html
@@ -36,7 +36,7 @@
                 or
             </span>
         </div>
-        <form action="#" method="post" id="login_frm:">
+        <form action="#" method="post" id="login_frm">
             <dl>
                 <dt>
                     Email or username
