--- a/figma_layout/samlip/index.html
+++ b/figma_layout/samlip/index.html
@@ -18,24 +18,23 @@
     <!-- header -->
     <div id="wrap">
         <header>
-            <div id="spc">
-                <!-- float : LEFT -->
-                <h1 id="logo"><a href=""><img src="./image/logo.png" alt="SPC삽립 로고"></a></h1>
-                <nav>
-                    <ul id="gnb">
-                        <li><a href="#">COMPANY</a></li>
-                        <li><a href="#">BRANDS</a></li>
-                        <li><a href="#">IR</a></li>
-                        <li><a href="#">SNS</a></li>
-                        <li><a href="#">RECRUIT</a></li>
-                        <li><a href="#">STORE</a></li>
-                    </ul>
-                </nav>
-                <ul id ="right_menu">
-                    <li><a href="#">customer</a></li>
-                    <li><button type="button" name="lang" id="lang"><img src="./image/lang_kr.png" alt="언어설정"></button></li>
-                    <li><button type="button" name="search_bar" id="search_bar"><img src="./image/search.png" alt="검색바 열기"></button></li>
+            <!-- float : LEFT -->
+            <h1 id="logo"><a href=""><img src="./image/logo.png" alt="SPC삽립 로고"></a></h1>
+            <nav>
+                <ul id="gnb">
+                    <li><a href="#">COMPANY</a></li>
+                    <li><a href="#">BRANDS</a></li>
+                    <li><a href="#">IR</a></li>
+                    <li><a href="#">SNS</a></li>
+                    <li><a href="#">RECRUIT</a></li>
+                    <li><a href="#">STORE</a></li>
                 </ul>
+            </nav>
+            <ul id ="right_menu">
+                <li><a href="#">CUSTUMER</a></li>
+                <li><button type="button" name="lang" id="lang"><img src="./image/lang_kr.png" alt="언어설정"></button></li>
+                <li><button type="button" name="search_bar" id="search_bar"><img src="./image/search.png" alt="검색바 열기"></button></li>
+            </ul>
         </header>
         <main>
             <div class="visual_bnr_wrap">
