--- a/figma_layout/samlip/test.html
+++ b/figma_layout/samlip/test.html
@@ -6,7 +6,83 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <title>Document</title>
     <style>
+        .container
+        {
+            background:lightgray;
+            padding:20px 0 ;
+            height: 1500px;
+            /* flex연습 (정렬하고 싶은 대상의 부모에게 명령 / UL에게 li 정렬 명령) */
+            display: flex;
+            /* flex-direction:row; */ /* 기존 정렬방향의 반대 방향으로 정렬 시켜라. */
+            /* flex-wrap:wrap; */
+            flex-flow: column wrap;
+            gap:10px;
+            align-items: flex-end;
+            /*  교차축 한줄 */
+        }
+        .container .item {
+            background: yellow;
+            width:100px;
+            height:100px;
+        }
+        .container .item:nth-child(1) {
+            order:-1;
+        }
+        .container .item:nth-child(2) {
+            order:1;
+            align-self: center;
+        }
+        .container .item:nth-child(3) {
+            order:2;
+            align-self:flex-end;
+        }
+        .container .item:nth-child(4) {
+            order:0;
+            align-self: center;
+        }
+        .container .item:nth-child(5) {
+            order:-2;
+            align-self: center;
+        }
+        .container .item:nth-child(6) {
+            order:4;
+            align-self: center;
+        }
+        .container .item:nth-child(7) {
+            order:3;
+            align-self: center;
+        }
+        .container .item:nth-child(8) {
+            order:5;
+            align-self: center;
+        }
+        .container .item:nth-child(odd) {
+            background: coral;
+            width:100px;
+            height:100px;
+        }
+        /* 연습 2*/
+
+        .container2 {
+            width:100%; padding: 0 80px;
+            background: lightblue; height: 100px;
+            /* 선언 */
+            display: flex;
+            /* 1. 메인축 정렬이 어느방향인가? -> 수평이다. *//* 2. 메인축을 기준으로 줄 바꿈이 되어있는가? -> 되어있지 않다.*/
+            flex-flow: row nowrap;
+            /* 3. 메인축의 정렬방법이 어떻게 되는가? 양쪽 끝 배치로, 일정한 간격으로 정렬되어있다. */
+            justify-content:space-between;
+             /* 4. 교차축이 몇줄인가? 1줄이다 -> align-items를 사용, 아닐경우 align-contents 사용. / 교차축의 정렬방법? 가운데 정렬. */
+            align-items: center;
+        }
+        .container2 .item{
+            background:yellow;
+            
+        }
         
+        .container2 .item:nth-child(1){width:50px;}
+        .container2 .item:nth-child(2){width:200px;}
+        .container2 .item:nth-child(3){width:150px;}
     </style>
 </head>
 <body>
@@ -15,6 +91,16 @@
         <li class="item">2</li>
         <li class="item">3</li>
         <li class="item">4</li>
+        <li class="item">5</li>
+        <li class="item">6</li>
+        <li class="item">7</li>
+        <li class="item">8</li>
+    </ul>
+    <hr>
+    <ul class="container2">
+        <li class="item">one</li>
+        <li class="item">two</li>
+        <li class="item">three</li>
     </ul>
 </body>
 </html>
