--- a/figma_layout/samlip/index.html
+++ b/figma_layout/samlip/index.html
@@ -2,65 +2,103 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SPC삼립</title>
+    <!-- 구글웹폰트,파비콘연결 -->
+    <link rel="shortcut icon" href="./images/logo_black.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+    <!-- 스타일시트연결 -->
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <title>spc삼립</title>
 </head>
 <body>
-    <!-- header -->
     <div id="wrap">
+        <!-- header -->
         <header>
-            <!-- float : LEFT -->
-            <h1 id="logo"><a href=""><img src="./image/logo.png" alt="SPC삽립 로고"></a></h1>
+            <h1><a href="./index.html"><img src="./images/logo_black.png" alt="SPC삼립"></a></h1>
             <nav>
-                <ul id="gnb">
+                <ul class="gnb">
                     <li><a href="#">COMPANY</a></li>
                     <li><a href="#">BRANDS</a></li>
-                    <li><a href="#">IR</a></li>
+                    <li>
+                        <a href="#">IR</a>
+                        <ul class="lnb">
+                            <li><a href="#">기업지배구조</a>
+                                <ul class="lnb_dth2">
+                                    <li><a href="#">이사회</a></li>
+                                    <li><a href="#">이사회 내 위원회</a></li>
+                                    <li><a href="#">주주총회</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">재무정보</a>
+                                <ul class="lnb_dth2">
+                                    <li><a href="#">재무상태표</a></li>
+                                    <li><a href="#">손익계산서</a></li>
+                                    <li><a href="#">현금흐름표</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">주식정보</a>
+                                <ul class="lnb_dth2">
+                                    <li><a href="#">공시</a></li>
+                                    <li><a href="#">실시간 주가정보</a></li>
+                                    <li><a href="#">배당현황</a></li>
+                                    <li><a href="#">공시정보관리규정</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                     <li><a href="#">SNS</a></li>
-                    <li><a href="#">RECRUIT</a></li>
+                    <li><a href="#">RECRUIT</a>
+                        <ul class="lnb">
+                            <li><a href="#">인사제도</a></li>
+                            <li><a href="#">입사지원</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">STORE</a></li>
                 </ul>
             </nav>
-            <ul id ="right_menu">
-                <li><a href="#">CUSTUMER</a></li>
-                <li><button type="button" name="lang" id="lang"><img src="./image/lang_kr.png" alt="언어설정"></button></li>
-                <li><button type="button" name="search_bar" id="search_bar"><img src="./image/search.png" alt="검색바 열기"></button></li>
+            <ul class="right_menu">
+                <li><a href="#">CUSTOMER</a></li>
+                <li>
+                    <a href="#"><img src="./images/lang_kr.png" alt="한국어보기"></a>
+                    <!-- 마우스 올릴 시 보이는 영역 -->
+                    <div class="lang_sel">
+                        <a href="#" class="kr">KR</a>
+                        <a href="#" class="en">EN</a>
+                        <a href="#" class="cn">CN</a>
+                    </div>
+                </li>
+                <li><a href="#"><img src="./images/search.png" alt="검색하기"></a></li>
             </ul>
         </header>
+        <!-- 1행 광고배너 -->
         <main>
-            <div class="visual_bnr_wrap">
-                <section class="bnr1">
-                    <h2>Good Food &<br>Happy Life</h2>
-                    <p>좋은 음식과 서비스를 통해 더 가치 있고<br>건강한 삶을 만들어나갑니다</p>
-                </section>
-                <section class="bnr2">
-                    <h2>Good Bread</h2>
-                    <p>우리만의 기술과 경험, 노하우로<br>제빵 산업의 내일을 엽니다</p>
-                </section>
-                <section class="bnr3">
-                    <h2>Tasty Food</h2>
-                    <p>맛과 건강을 생각한 음식으로<br>맛있는 푸드 스토리를 만듭니다</p>
-                </section>
-                <section class="bnr4">
-                    <h2>Sweet Dessert</h2>
-                    <p>소비자의 취향에 맞는<br>새로운 디저트 문화를 제안합니다</p>
-                </section>
-                <section class="bnr5">
-                    <h2>Fresh Deli</h2>
-                    <p>최첨단 시스템과 설비로 소비자의 식탁에<br>가장 신선한 식품을 전달합니다</p>
-                </section>
+            <div class="visual_wrap"> <!-- 뷰포트 너비에서만 보이는 영역 (넘친영역 숨기기)-->
+                <div class="visual_bnr_wrap"> <!-- 개별 배너의 큰 부모 -->
+                    <section class="bnr1">
+                        <h2>Good Food &<br>Happy Life</h2>
+                        <p>좋은 음식과 서비스를 통해 더 가치 있고<br>건강한 삶을 만들어나갑니다</p>
+                    </section>
+                    <section class="bnr2">
+                        <h2>Good Bread</h2>
+                        <p>우리만의 기술과 경험, 노하우로<br>제빵 산업의 내일을 엽니다</p>
+                    </section>
+                    <section class="bnr3">
+                        <h2>Tasty Food</h2>
+                        <p>맛과 건강을 생각한 음식으로<br>맛있는 푸드 스토리를 만듭니다</p>
+                    </section>
+                    <section class="bnr4">
+                        <h2>Sweet Dessert</h2>
+                        <p>소비자의 취향에 맞는<br>새로운 디저트 문화를 제안합니다</p>
+                    </section>
+                </div>
             </div>
         </main>
-        <!-- 1행 광고배너 -->
     </div>
 </body>
 </html>
