--- a/figma_layout/samlip/test.html
+++ b/figma_layout/samlip/test.html
@@ -3,86 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>test</title>
     <link rel="stylesheet" href="./styles/reset.css">
-    <title>Document</title>
     <style>
-        .container
-        {
+        .container {
             background:lightgray;
-            padding:20px 0 ;
-            height: 1500px;
-            /* flex연습 (정렬하고 싶은 대상의 부모에게 명령 / UL에게 li 정렬 명령) */
-            display: flex;
-            /* flex-direction:row; */ /* 기존 정렬방향의 반대 방향으로 정렬 시켜라. */
-            /* flex-wrap:wrap; */
-            flex-flow: column wrap;
+            padding:20px 0;
+            height:500px;
+            /* flex연습(정렬하고 싶은 대상(li)의 부모(ul)에게 명령시작) */
+            display:flex;
+            /* flex-direction:row;
+            flex-wrap:wrap; */
+            flex-flow:row wrap;/* 메인축방향 줄바꿈 */
+            justify-content:center;
             gap:10px;
-            align-items: flex-end;
-            /*  교차축 한줄 */
+            /* 교차축 1줄 */
+            align-items:flex-end;
+            /* 교차축 2줄 이상 */
+            /* align-content:space-between; */
         }
         .container .item {
-            background: yellow;
-            width:100px;
-            height:100px;
-        }
-        .container .item:nth-child(1) {
-            order:-1;
-        }
-        .container .item:nth-child(2) {
-            order:1;
-            align-self: center;
-        }
-        .container .item:nth-child(3) {
-            order:2;
-            align-self:flex-end;
-        }
-        .container .item:nth-child(4) {
-            order:0;
-            align-self: center;
-        }
-        .container .item:nth-child(5) {
-            order:-2;
-            align-self: center;
-        }
-        .container .item:nth-child(6) {
-            order:4;
-            align-self: center;
-        }
-        .container .item:nth-child(7) {
-            order:3;
-            align-self: center;
-        }
-        .container .item:nth-child(8) {
-            order:5;
-            align-self: center;
-        }
-        .container .item:nth-child(odd) {
-            background: coral;
-            width:100px;
-            height:100px;
-        }
-        /* 연습 2*/
-
-        .container2 {
-            width:100%; padding: 0 80px;
-            background: lightblue; height: 100px;
-            /* 선언 */
-            display: flex;
-            /* 1. 메인축 정렬이 어느방향인가? -> 수평이다. *//* 2. 메인축을 기준으로 줄 바꿈이 되어있는가? -> 되어있지 않다.*/
-            flex-flow: row nowrap;
-            /* 3. 메인축의 정렬방법이 어떻게 되는가? 양쪽 끝 배치로, 일정한 간격으로 정렬되어있다. */
-            justify-content:space-between;
-             /* 4. 교차축이 몇줄인가? 1줄이다 -> align-items를 사용, 아닐경우 align-contents 사용. / 교차축의 정렬방법? 가운데 정렬. */
-            align-items: center;
-        }
-        .container2 .item{
             background:yellow;
-            
+            width:100px; height:100px; font-size:3rem;
         }
-        
-        .container2 .item:nth-child(1){width:50px;}
-        .container2 .item:nth-child(2){width:200px;}
-        .container2 .item:nth-child(3){width:150px;}
+        .container .item:nth-child(1) {order:1;}
+        .container .item:nth-child(2) {order:0; align-self:center;}
+        .container .item:nth-child(3) {order:2;}
+        .container .item:nth-child(4) {order:-1;}
+        .container .item:nth-child(5) {order:3;}
+        .container .item:nth-child(6) {order:1;}
+        .container .item:nth-child(7) {order:0;}
+        .container .item:nth-child(8) {order:4;}
+        .container .item:nth-child(odd) {
+            background:coral;
+        }
+        /* 연습2 */
+        .container2 {
+            width:100%; padding:0 80px;
+            background:lightblue; height:100px;
+            display:flex;
+            /* 메인축 정렬이 어느방향? 수평, 메인축 기준으로 줄바꿈? */
+            flex-flow:row nowrap;
+            /* 메인축 정렬방법? 양쪽 끝 배치 */
+            justify-content: space-between;
+            /* 교차축이 몇줄인가? 1, 교차축 정렬방법? 가운데  */
+            align-items:center;
+        }
+        .container2 .item {background:yellow;}
+        .container2 .item:nth-child(1) {width:50px;}
+        .container2 .item:nth-child(2) {width:200px;}
+        .container2 .item:nth-child(3) {width:150px;}
     </style>
 </head>
 <body>
@@ -98,9 +68,9 @@
     </ul>
     <hr>
     <ul class="container2">
-        <li class="item">one</li>
-        <li class="item">two</li>
-        <li class="item">three</li>
+        <li class="item">1</li>
+        <li class="item">2</li>
+        <li class="item">3</li>
     </ul>
 </body>
 </html>
