250827 삼립 index 완성

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/form/spotify_login.html" target="_blank">스포티파이 로그인</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/form/market_join/join.html" target="_blank">마켓컬리 회원가입</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/ohou/index.html" target="_blank">오늘의 집 회원가입</a></li>
+                <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/samlip/index.html" target="_blank">삼립 메인페이지</a></li>
             </ul>
             <h2>과제제출!</h2>
             <ul class="result">
