250827 경영이념 작성

--- a/figma_layout/samlip/index.html
+++ b/figma_layout/samlip/index.html
@@ -79,15 +79,15 @@
         <main>
         <!-- 고정 페이지 위치 -->
             <div class="main_pst_link">
-                <a href="#visual"><span class="name">main</span><span class="circle"></span></a>
-                <a href="#news"><span class="name">news & notice</span><span class="circle"></span></a>
-                <a href="#"><span class="name">Now @ Samlip Studio</span><span class="circle"></span></a>
-                <a href="#"><span class="name">Our Brands</span><span class="circle"></span></a>
-                <a href="#"><span class="name">Company Info</span><span class="circle"></span></a>
+                <a href=".visual_wrap"><span>main</span><span class="circle"></span></a>
+                <a href="#news"><span>news & notice</span><span class="circle"></span></a>
+                <a href="#"><span>Now @ Samlip Studio</span><span class="circle"></span></a>
+                <a href="#"><span>Our Brands</span><span class="circle"></span></a>
+                <a href="#"><span>Company Info</span><span class="circle"></span></a>
             </div>
         <!-- 1행 광고배너 -->
-            <div id="visual" class="visual_wrap"> <!-- 뷰포트 너비에서만 보이는 영역 (넘친영역 숨기기)-->
-                <div class="visual_bnr_wrap"> <!-- 개별 배너의 큰 부모 -->
+            <div class="visual_wrap"> <!-- 뷰포트 너비에서만 보이는 영역 (넘친영역 숨기기)-->
+                <div id="visual_bnr_wrap"> <!-- 개별 배너의 큰 부모 -->
                     <section class="bnr1">
                         <h2>Good Food &<br>Happy Life</h2>
                         <p>좋은 음식과 서비스를 통해 더 가치 있고<br>건강한 삶을 만들어나갑니다</p>
@@ -104,85 +104,48 @@
                         <h2>Sweet Dessert</h2>
                         <p>소비자의 취향에 맞는<br>새로운 디저트 문화를 제안합니다</p>
                     </section>
-                    <!-- 1행 버튼 -->
-                </div>
-                <div class="prev_next_wrap">
-                    <a href="#" class="prev"><img src="./images/arrow_next_preview.png" alt=""></a>
-                    <a href="#" class="next"><img src="./images/arrow_next_preview.png" alt=""></a>
                 </div>
             </div>
+            <h2 id="news">News & notice</h2>
+            <p>SPC Samlip news updates, from a company that is always happy.</p>
             <!-- 2행 뉴스 & 공지사항 -->
-            <section class="news_notice_wrap">
-                <h2 id="news">News & notice</h2>
-                <p>SPC Samlip news updates, from a company that is always happy.</p>
-                <div class="card_wrap">
-                    <ul class="car_all">
-                        <li>
-                            <a href="#">
-                                <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
-                                <h3>삼립, '초당 옥수수 미니꿀약과' 출시</h3>
-                                <p class="date">2025년 08월 27일</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <p class="photo"><img src="./images/card_pic_002.png" alt=""></p>
-                                <h3>삼립, 칼로리·당 없는 ‘얼려먹는 젤리뽀 zero’ 출시</h3>
-                                <p class="date">2025년 08월 22일</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <p class="photo"><img src="./images/card_pic_003.png" alt=""></p>
-                                <h3>삼립, ‘크보빵’ 1000만개 판매 돌파</h3>
-                                <p class="date">2025년 08월 22일</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <p class="photo"><img src="./images/card_pic_004.png" alt=""></p>
-                                <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
-                                <p class="date">2025년 08월 27일</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
-                                <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
-                                <p class="date">2025년 08월 22일</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <p class="photo"><img src="./images/card_pic_002.png" alt=""></p>
-                                <h3>삼립, 칼로리·당 없는 ‘얼려먹는 젤리뽀 zero’ 출시</h3>
-                                <p class="date">2025년 08월 22일</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <p class="photo"><img src="./images/card_pic_003.png" alt=""></p>
-                                <h3>삼립, ‘크보빵’ 1000만개 판매 돌파</h3>
-                                <p class="date">2025년 08월 22일</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <p class="photo"><img src="./images/card_pic_004.png" alt=""></p>
-                                <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
-                                <p class="date">2025년 08월 27일</p>
-                            </a>
-                        </li>
-                    </ul>
+            <ul class="news_notice_wrap">
+                <li>
+                    <a href="#">
+                        <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
+                        <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
+                    </a>
+                    <p class="date">2025년 08월 22일</p>
+                </li>
+                <li>
+                    <a href="#">
+                        <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
+                        <h3>삼립, 칼로리·당 없는 ‘얼려먹는 젤리뽀 zero’ 출시</h3>
+                    </a>
+                    <p class="date">2025년 08월 22일</p>
+                </li>
+                <li>
+                    <a href="#">
+                        <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
+                        <h3>삼립, ‘크보빵’ 1000만개 판매 돌파</h3>
+                    </a>
+                    <p class="date">2025년 08월 22일</p>
+                </li>
+                <li>
+                    <a href="#">
+                        <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
+                        <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
+                    </a>
+                    <p class="date">2025년 08월 27일</p>
+                </li>
                 </div>
-                <div class="prev_next_wrap">
-                    <a href="#" class="prev"><img src="./images/arrow_next_preview.png" alt=""></a>
-                    <a href="#" class="next"><img src="./images/arrow_next_preview.png" alt=""></a>
+                <div class="card_btn_wrap">\
+                    <a href="#" class="previous"><img src="./images/arrow_next_preview.png" alt="이전"></a>/div>
+                    <a href="#" class="next"><img src="./images/arrow_next_preview.png" alt="이전"></a>/div>
+                <div class="view_more">
+                    <a href="#"><img src="./images/view_icon.png" alt="더보기"></a>
                 </div>
-                <a href="#" class="view_all_button">
-                    <img src="./images/view_icon.png" alt="더보기"><span>view all news</span>
-                </a>
-            </section>
+            </div>
         </main>
     </div>
 </body>
